text cropped in Chrome: fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -483,6 +483,7 @@ foter .popover a:visited{
 	background-color: #ffffff !important;
 	box-shadow: none;
 	border-radius: 0;
+    line-height: 34px;
 }
 
 .form-control:focus {
